# eodata

./: .gitignore  CHANGELOG.md  README.md  eodata.py  pyproject.toml
.github/workflows/: build.yml  lint.yml  release.yml
eodata/: edf.py  icon.py  main_window.py  selection.py  table.py
icons/: icon.icns
release/: deploy.py  prepare.py
