[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eodata"
dynamic = ["version"]
description = 'Tool for creating and modifying the EDF data files from Endless Online.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["endless-online"]
authors = [
  { name = "Jonah Jeleniewski", email = "cirrasbu@hotmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Utilities",
]
dependencies = [
  "PySide6~=6.7.2",
  "eolib~=1.1.0",
]

[project.urls]
Documentation = "https://github.com/Cirras/eodata#readme"
Issues = "https://github.com/Cirras/eodata/issues"
Source = "https://github.com/Cirras/eodata"

[tool.hatch.version]
path = "eodata/__about__.py"

[tool.hatch.build]
include = [
  "/eodata",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
dependencies = [
  "black>=24.4.2",
  "mypy>=1.0.0",
]
[tool.hatch.envs.lint.scripts]
format = "black {args:.}"
style = "black --check --diff {args:.}"
typing = [
  "mypy --install-types --non-interactive {args:eodata}"
]
all = [
  "style",
  "typing",
]

[tool.hatch.envs.release]
detached = true
dependencies = [
  "keepachangelog==1.0.0",
]

[tool.hatch.envs.release.scripts]
prepare = [
  "python prepare_release.py {args}" 
]

[tool.black]
target-version = ["py310"]
line-length = 100
skip-string-normalization = true
